--- a/src/components/PhotoGalerie/photoGalerie.module.sass
+++ b/src/components/PhotoGalerie/photoGalerie.module.sass
@@ -7,7 +7,7 @@
 
 .photos
   display: flex
-  width: 1320px
+  width: 100%
   justify-content: center
   align-items: flex-start
   align-content: flex-start
