--- a/src/components/Formulaire/formulaire.module.sass
+++ b/src/components/Formulaire/formulaire.module.sass
@@ -3,20 +3,18 @@
   display: flex
   flex-direction: column
   align-items: center
-  width: 678px
+  width: 60%
   padding: 24px
   gap: 10px
   border-radius: 16px
   background: $black
   @media (max-width: 768px)
-    width: 330px
+    width: 90%
 
 h2
     text-align: center
     color: $beige
     margin-bottom: 20px
-    @media (max-width: 768px)
-        width: 320px
 
 .form
   display: flex
@@ -26,8 +24,11 @@ h2
 
 .nameContainer
   display: flex
+  flex-direction: row
   gap: 10px
   width: 100%
+  @media (max-width: 768px)
+    flex-direction: column
 
 .formGroup
   display: flex
@@ -41,19 +42,12 @@ h2
   border: 1px solid $black
   background-color: $beige
   box-shadow: 0px 1px 2px 0px $black
-  font-family: Lato_R
-  font-size: 16px
-  font-weight: 400
-  line-height: 24px
+  width: auto
 
 .textArea
   resize: vertical
   min-height: 100px
 
-.errorMessage
-  color:#FFF425
-  font-size: 16px
-  font-family: Marvel_B
 
 .submitButton
   padding: 10px 20px
