--- a/src/index.sass
+++ b/src/index.sass
@@ -4,6 +4,7 @@ $beige: #F2E0CF
 $Latte: #B48954
 $terra-cotta: #854628
 $black: #000
+$jaune: #FFF425
 
 // Importation des polices
 @font-face
@@ -34,6 +35,9 @@ h1
   font-style: bold
   font-weight: 700
   line-height: normal
+  @media (max-width: 768px)
+    font-size: 32px
+
 
 // H2
 h2
@@ -42,6 +46,8 @@ h2
   font-style: light
   font-weight: 300
   line-height: normal
+  @media (max-width: 768px)
+    font-size: 24px
 
 
 // H3
@@ -50,7 +56,9 @@ h3
   font-size: 24px
   font-style: bold
   font-weight: 700
-  line-height: 200% // 48px
+  line-height: 200%
+  @media (max-width: 768px)
+    font-size: 16px
 
 // Paragraphe
 p
@@ -58,7 +66,9 @@ p
   font-size: 16px
   font-style: normal
   font-weight: 400
-  line-height: 150% // 24px
+  line-height: 150%
+  @media (max-width: 768px)
+    font-size: 14px
 
 // Prix
 .price
@@ -67,6 +77,8 @@ p
   font-style: bold
   font-weight: 700
   line-height: normal
+  @media (max-width: 768px)
+    font-size: 24px
 
 // Saisie
 input, textarea
@@ -74,23 +86,37 @@ input, textarea
   font-size: 16px
   font-style: normal
   font-weight: 400
-  line-height: 150% // 24px
+  line-height: 150%
+  @media (max-width: 768px)
+    font-size: 14px
+
+/* Alerte erreur */
+.errorMessage
+  font-family: 'Lato_R', sans-serif
+  font-size: 14px
+  font-style: normal
+  line-height: normal
+  color: $jaune
+  @media (max-width: 768px)
+      font-size: 12px
 
 // Bouton inactif
 .button-inactive
   font-family: 'Marvel_R', sans-serif
   font-size: 24px
   font-style: normal
-  font-weight: 400
   line-height: normal
+  @media (max-width: 768px)
+      font-size: 16px
 
 // Bouton actif
 .button-active
   font-family: 'Marvel_B', sans-serif
   font-size: 24px
   font-style: bold
-  font-weight: 700
   line-height: normal
+  @media (max-width: 768px)
+      font-size: 16px
 
   // Lien
 a 
@@ -98,3 +124,6 @@ a
   text-decoration: none
   color: inherit
 
+body
+  margin:0
+  padding: 0
