index.sass modifié

--- a/src/index.sass
+++ b/src/index.sass
@@ -32,7 +32,7 @@ $jaune: #FFF425
 h1
   font-family: 'Dancing Script', cursive
   font-size: 72px
-  font-style: bold
+  font-style: normal
   font-weight: 700
   line-height: normal
   @media (max-width: 768px)
@@ -54,7 +54,7 @@ h2
 h3
   font-family: 'Marvel_B', sans-serif
   font-size: 24px
-  font-style: bold
+  font-style: normal
   font-weight: 700
   line-height: 200%
   @media (max-width: 768px)
@@ -74,7 +74,7 @@ p
 .price
   font-family: 'Marvel_B', sans-serif
   font-size: 40px
-  font-style: bold
+  font-style: normal
   font-weight: 700
   line-height: normal
   @media (max-width: 768px)
@@ -113,7 +113,7 @@ input, textarea
 .button-active
   font-family: 'Marvel_B', sans-serif
   font-size: 24px
-  font-style: bold
+  font-style: normal
   line-height: normal
   @media (max-width: 768px)
       font-size: 16px
@@ -127,3 +127,4 @@ a
 body
   margin:0
   padding: 0
+  width:100%
