--- a/src/components/Home/Hero/hero.module.sass
+++ b/src/components/Home/Hero/hero.module.sass
@@ -1,19 +1,50 @@
 @import '../../../index.sass'
 .homeHero
     display: flex
-    width: 100%
+    width: auto
     height: 700px
-    padding-left: 4%
+    padding-left: 60px
     align-items: center
-    gap: 4%
+    gap: 60px
     flex-shrink: 0
     position: relative
-    
-.homeHero_txt
-    display: flex
-    height: 480px
-    padding: 1,5%
-    flex-direction: column
-    justify-content: space-between
-    align-items: flex-start
-    flex: 1 0 0
+    @media (max-width: 768px)
+        display: flex
+        height: 345px
+        padding: 18px 15px
+        flex-direction: column
+        align-items: flex-start
+        gap: 18px
+        flex-shrink: 0
+        align-self: stretch
+    &_txt
+        display: flex
+        width: 60%
+        height: 480px
+        padding: 24px
+        gap: 24px
+        flex-direction: column
+        justify-content: space-between
+        align-items: flex-start
+        flex: 1 0 0
+        @media (max-width: 768px)
+            gap: 18px
+            height: auto
+            padding: 0px
+    &_img
+        width: 650px
+        height: 700px
+        position: absolute
+        right: 0px
+        @media (max-width: 768px)
+            width: 140px
+            height: 152px
+        &_fleur
+            display: flex
+            width: auto
+            height: 650px
+            align-items: center
+            flex-shrink: 0
+            
+
+
