hero home fini et ajusté padding header

--- a/src/components/Footer/footer.module.sass
+++ b/src/components/Footer/footer.module.sass
@@ -8,6 +8,7 @@
     align-items: center
     flex-shrink: 0
     background: $black
+    bottom: 0px
     &_reseauxSociaux
         display: flex
         justify-content: center
