--- a/src/components/Header/header.module.sass
+++ b/src/components/Header/header.module.sass
@@ -6,6 +6,8 @@
   justify-content: space-between
   align-items: center
   position: relative // Nécessaire pour positionner le menu burger
+  @media (max-width: 768px)
+    padding: 18px 15px
 
   &_logo
     width: 148px
