--- a/src/components/Home/Hero/hero.module.sass
+++ b/src/components/Home/Hero/hero.module.sass
@@ -1,14 +1,23 @@
 @import '../../../index.sass'
+h1 span::after
+  content: '\A' // Code pour un saut de ligne
+  white-space: pre // Assure que le saut de ligne est respecté
+
+h3 span::after
+  content: '\A' // Code pour un saut de ligne
+  white-space: pre // Assure que le saut de ligne est respecté
+
 .homeHero
     display: flex
-    width: auto
-    height: 700px
-    padding-left: 60px
+    justify-content: space-between
     align-items: center
-    gap: 60px
-    flex-shrink: 0
-    position: relative
+    width:100%
+    height: 100vh
+    padding-left: 60px
+    overflow: hidden // Évite le scroll horizontal
+    box-sizing: border-box // Inclut le padding dans la largeur totale
     @media (max-width: 768px)
+        position: relative
         display: flex
         height: 345px
         padding: 18px 15px
@@ -17,34 +26,52 @@
         gap: 18px
         flex-shrink: 0
         align-self: stretch
+        
     &_txt
         display: flex
-        width: 60%
-        height: 480px
-        padding: 24px
-        gap: 24px
         flex-direction: column
         justify-content: space-between
         align-items: flex-start
-        flex: 1 0 0
+        width: 65%
+        height: 430px
+        padding: 24px
+        box-sizing: border-box // Assure que le padding est inclus dans la largeur
         @media (max-width: 768px)
             gap: 18px
+            width: 100%
             height: auto
             padding: 0px
+    
     &_img
-        width: 650px
-        height: 700px
-        position: absolute
-        right: 0px
+        position: relative
+        width: 40% // Prend 40% de la largeur de l'écran
+        height: 100% // Prend toute la hauteur de l'écran
+        display: flex
+        justify-content: center // Centre les images horizontalement
+        align-items: center // Centre les images verticalement
         @media (max-width: 768px)
-            width: 140px
-            height: 152px
+            position: absolute
+            right: 0
+            bottom: 0
         &_fleur
-            display: flex
-            width: auto
-            height: 650px
-            align-items: center
-            flex-shrink: 0
-            
+            position: absolute
+            right: -10px
+            bottom: -10px
+            width: 125%
+            height: auto
+            z-index: 1
+            pointer-events: none
+            @media (max-width: 768px)
+                width: 140px
+
+        &_main
+            position: absolute
+            right: 0
+            bottom: 0
+            width: 125%
+            height: auto
+            z-index: 2
+            @media (max-width: 768px)
+                width: 125px
 
 
