--- a/src/index.sass
+++ b/src/index.sass
@@ -35,6 +35,7 @@ h1
   font-style: normal
   font-weight: 700
   line-height: normal
+  margin: 0
   @media (max-width: 768px)
     font-size: 32px
 
@@ -46,6 +47,7 @@ h2
   font-style: light
   font-weight: 300
   line-height: normal
+  margin: 0
   @media (max-width: 768px)
     font-size: 24px
 
@@ -57,6 +59,7 @@ h3
   font-style: normal
   font-weight: 700
   line-height: 200%
+  margin: 0
   @media (max-width: 768px)
     font-size: 16px
 
@@ -67,6 +70,7 @@ p
   font-style: normal
   font-weight: 400
   line-height: 150%
+  margin: 0
   @media (max-width: 768px)
     font-size: 14px
 
@@ -77,6 +81,7 @@ p
   font-style: normal
   font-weight: 700
   line-height: normal
+  margin: 0
   @media (max-width: 768px)
     font-size: 24px
 
@@ -87,6 +92,7 @@ input, textarea
   font-style: normal
   font-weight: 400
   line-height: 150%
+  margin: 0
   @media (max-width: 768px)
     font-size: 14px
 
@@ -97,6 +103,7 @@ input, textarea
   font-style: normal
   line-height: normal
   color: $jaune
+  margin: 0
   @media (max-width: 768px)
       font-size: 12px
 
@@ -106,6 +113,7 @@ input, textarea
   font-size: 24px
   font-style: normal
   line-height: normal
+  margin: 0
   @media (max-width: 768px)
       font-size: 16px
 
@@ -115,6 +123,7 @@ input, textarea
   font-size: 24px
   font-style: normal
   line-height: normal
+  margin: 0
   @media (max-width: 768px)
       font-size: 16px
 
