--- a/src/components/Home/Hero/hero.module.sass
+++ b/src/components/Home/Hero/hero.module.sass
@@ -32,8 +32,8 @@ h3 span::after
         flex-direction: column
         justify-content: space-between
         align-items: flex-start
-        width: 65%
-        height: 430px
+        width: 60%
+        height: auto
         padding: 24px
         box-sizing: border-box // Assure que le padding est inclus dans la largeur
         @media (max-width: 768px)
@@ -57,21 +57,17 @@ h3 span::after
             position: absolute
             right: -10px
             bottom: -10px
-            width: 125%
+            width: 100%
             height: auto
             z-index: 1
             pointer-events: none
-            @media (max-width: 768px)
-                width: 140px
 
         &_main
             position: absolute
             right: 0
             bottom: 0
-            width: 125%
+            width: 100%
             height: auto
             z-index: 2
-            @media (max-width: 768px)
-                width: 125px
 
 
