--- a/src/components/Home/Hero/hero.module.sass
+++ b/src/components/Home/Hero/hero.module.sass
@@ -2,6 +2,7 @@
 h1 span::after
   content: '\A' // Code pour un saut de ligne
   white-space: pre // Assure que le saut de ligne est respecté
+  margin: 0
 
 h3 span::after
   content: '\A' // Code pour un saut de ligne
@@ -11,7 +12,7 @@ h3 span::after
     display: flex
     justify-content: space-between
     align-items: center
-    width:100%
+    width: 100%
     height: 100vh
     padding-left: 60px
     overflow: hidden // Évite le scroll horizontal
@@ -32,9 +33,10 @@ h3 span::after
         flex-direction: column
         justify-content: space-between
         align-items: flex-start
-        width: 60%
+        width: 65%
         height: auto
         padding: 24px
+        gap: 24px
         box-sizing: border-box // Assure que le padding est inclus dans la largeur
         @media (max-width: 768px)
             gap: 18px
@@ -44,7 +46,7 @@ h3 span::after
     
     &_img
         position: relative
-        width: 40% // Prend 40% de la largeur de l'écran
+        width: 35% // Prend 40% de la largeur de l'écran
         height: 100% // Prend toute la hauteur de l'écran
         display: flex
         justify-content: center // Centre les images horizontalement
@@ -55,9 +57,9 @@ h3 span::after
             bottom: 0
         &_fleur
             position: absolute
-            right: -10px
-            bottom: -10px
-            width: 100%
+            right: -20px
+            bottom: 0px
+            width: 120%
             height: auto
             z-index: 1
             pointer-events: none
