--- a/src/components/Home/s1_salon/salon.module.sass
+++ b/src/components/Home/s1_salon/salon.module.sass
@@ -1,9 +1,43 @@
 @import '../../../index.sass'
-.salonHero
+.s1Salon
+    position: relative
     display: flex
-    width: 100%
-    height: 700px
-    padding-left: 4%
+    padding: 24px 60px
+    justify-content: center
     align-items: center
-    gap: 4%
-    flex-shrink: 0
+    gap: 73px
+    align-self: stretch
+    background-color: $beige
+    @media (max-width: 768px)
+        
+
+    &_bkgrd
+        width: 868px
+        height: 455px
+        position: absolute
+        right: 160px
+        top: 22px
+        background-color: $black
+        z-index: 1
+    &_container
+        display: flex
+        width: 88%
+        height: 455px
+        justify-content: space-between
+        align-items: center
+        z-index: 2
+        &_imgvitrine
+            border: 8px solid $black
+            width: 390px
+            height: auto
+        &_txt
+            display: flex
+            width: 43%
+            height: 370px
+            padding: 24px
+            flex-direction: column
+            justify-content: space-between
+            align-items: flex-start
+            flex-shrink: 0
+            color: $beige
+
