--- a/src/components/Home/Hero/hero.module.sass
+++ b/src/components/Home/Hero/hero.module.sass
@@ -46,15 +46,16 @@ h3 span::after
     
     &_img
         position: relative
-        width: 35% // Prend 40% de la largeur de l'écran
-        height: 100% // Prend toute la hauteur de l'écran
+        width: 35% 
+        height: 100% 
         display: flex
-        justify-content: center // Centre les images horizontalement
-        align-items: center // Centre les images verticalement
+        justify-content: center 
+        align-items: center 
         @media (max-width: 768px)
             position: absolute
             right: 0
             bottom: 0
+            width: 25%
         &_fleur
             position: absolute
             right: -5px
