--- a/src/components/Home/s3_galerie/galerie.module.sass
+++ b/src/components/Home/s3_galerie/galerie.module.sass
@@ -1,1 +1,39 @@
 @import '../../../index.sass'
+.s3Galerie
+    display: flex
+    padding: 24px 60px 48px 60px
+    flex-direction: column
+    align-items: center
+    gap: 24px
+    align-self: stretch
+    &_title
+        width: 47%
+        color: $terra-cotta
+        text-align: center
+    &_container
+        display: flex
+        width: 91%
+        height: 290px
+        justify-content: space-between
+        align-items: center
+        &_grp1, &_grp2, &_grp3, &_grp4
+            width: 290px
+            height: 290px
+            position: relative
+            flex-shrink: 0
+            border-radius: 8px
+            z-index: 1
+
+            &_img1
+
+        
+
+            &_img2
+
+        
+
+            &_img3
+
+        
+
+            &_img4
