Home partie horaire fait

--- a/src/components/Home/s2_service/service.module.sass
+++ b/src/components/Home/s2_service/service.module.sass
@@ -8,9 +8,9 @@
     align-self: stretch
     @media (max-width: 768px)
         padding: 18px 15px
-        gap: 5%
+        gap: 18px
     &_title
-        width: 37%
+        width: 100%
         color: $black
     &_container
         display: flex
@@ -34,7 +34,6 @@
             @media (max-width: 768px)
                 justify-content: center
                 align-self: center
-                height: 411px
             &_img
                 width: 34%
                 height: auto
@@ -50,6 +49,7 @@
                 align-items: center
                 gap: 24px
                 @media (max-width: 768px)
+                    width: 80%
                     height: 375px
                     padding: 18px 0px
                     gap: 5%
