--- a/src/components/Footer/footer.module.sass
+++ b/src/components/Footer/footer.module.sass
@@ -9,20 +9,21 @@
     flex-shrink: 0
     background: $black
     bottom: 0px
+    @media (max-width: 768px)
+        padding: 18px 18px
     &_reseauxSociaux
         display: flex
-        justify-content: center
         align-items: flex-start
         gap: 24px
+        @media (max-width: 768px)
+            gap: 18px
         &_fb, 
         &_insta
             width: 48px
             height: auto
-        @media (max-width: 768px)
-        &_fb, 
-        &_insta
-            width: 40px
-            height: auto
+            @media (max-width: 768px)
+                width: 30px
+                height: auto
         
     &_contactTxt
         display: flex
