--- a/src/components/Home/s1_salon/salon.module.sass
+++ b/src/components/Home/s1_salon/salon.module.sass
@@ -26,6 +26,8 @@
   height: auto
   align-self: stretch
   background-color: $beige
+  overflow: hidden
+  box-sizing: border-box
   @media (max-width: 768px)
     display: flex
     padding: 18px 15px
