--- a/src/components/temoignage/temoignage.module.sass
+++ b/src/components/temoignage/temoignage.module.sass
@@ -26,7 +26,7 @@
     background-image: url('../../assets/icône_illustration/bckgrd/dentelle_removebg.webp')
     background-size: cover
     background-position: center
-    opacity: 0.3
+    opacity: 0.2
     z-index: -1
 
   &__title, &__subtitle
@@ -40,8 +40,7 @@
     justify-content: center
     align-items: center
     padding: 0px 24px
-    position: relative // Important pour le positionnement de la pagination
-
+    
   .swiper-slide
     display: flex
     justify-content: center
@@ -56,6 +55,7 @@
     color: $terra-cotta
     background-color: $beige
     border-radius: 50% 
+    border: 1px solid $terra-cotta
     padding: 24px
     width: 200px
     height: 200px
@@ -88,11 +88,4 @@
 
 /* surcharge de la variable swiper-theme-color */
 :root
-  --swiper-theme-color: $beige
-
-/* Modifiez d'autres styles de pagination si nécessaire */
-.swiper-pagination-bullet 
-  background-color: $black
-
-.swiper-pagination-bullet-active 
-  background-color: $beige
+  --swiper-theme-color: #F2E0CF
