Page Salon s1 Maude fait

--- a/src/components/Salon/Hero/heroSalon.module.sass
+++ b/src/components/Salon/Hero/heroSalon.module.sass
@@ -31,6 +31,7 @@
     @media (min-width: 769px)
         background-attachment: fixed // Fixe l'image par rapport à l'écran pour l'effet parallaxe
         background-position: center
+        padding: 18px
 
     // Animation de parallaxe au scroll
     &::before
