Page Salon parte Le Salon faite

--- a/src/components/Salon/Hero/heroSalon.module.sass
+++ b/src/components/Salon/Hero/heroSalon.module.sass
@@ -28,7 +28,7 @@
         will-change: transform
     
     // Parallaxe en fonction du défilement
-    @media (min-width: 769px)
+    @media (max-width: 769px)
         background-attachment: fixed // Fixe l'image par rapport à l'écran pour l'effet parallaxe
         background-position: center
         padding: 18px
