--- a/src/components/Salon/s1_Maude/s1Maude.module.sass
+++ b/src/components/Salon/s1_Maude/s1Maude.module.sass
@@ -30,6 +30,8 @@
       flex-direction: column
       align-items: center
       gap: 5%
+      p
+        text-align: center
 
     &_txt
       display: flex
