--- a/src/components/Salon/s4_coordonnees/coordonnee.module.sass
+++ b/src/components/Salon/s4_coordonnees/coordonnee.module.sass
@@ -11,7 +11,7 @@
     overflow: hidden
     box-sizing: border-box
     @media (max-width: 768px)
-        padding: 18px 15px
+        padding: 0px 15px
         gap: 18px
     &_title
         color: $terra-cotta
@@ -24,6 +24,8 @@
         align-items: center
         align-self: stretch
         overflow: hidden
+        @media (max-width: 768px)
+            height: auto
     
         &_item
             width: 23%
