--- a/src/pages/Galerie/Galerie.module.sass
+++ b/src/pages/Galerie/Galerie.module.sass
@@ -1,9 +1,10 @@
 .s1Galerie
     display: flex
-    padding: 48px 60px
     width: 100%
+    display: flex
     flex-direction: column
+    justify-content: center
     align-items: center
     gap: 24px
-    align-self: stretch
-    position: relative
+    overflow: hidden
+    box-sizing: border-box
