--- a/src/components/Galerie/NavbarGalerie/navbarGalerie.module.sass
+++ b/src/components/Galerie/NavbarGalerie/navbarGalerie.module.sass
@@ -4,6 +4,8 @@
   justify-content: center
   align-items: center
   flex-direction: column
+  gap: 16px
+  padding-top: 16px
   &_navBar
     display: flex
     width: 640px
