--- a/src/pages/Galerie/Galerie.module.sass
+++ b/src/pages/Galerie/Galerie.module.sass
@@ -8,3 +8,17 @@
     gap: 24px
     overflow: hidden
     box-sizing: border-box
+    position: relative
+        // Pseudo-élément pour l'image de fond
+    &::before 
+        content: ''
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
+        height: 100%
+        background-image: url('../../assets/icône_illustration/bckgrd/dentelle_removebg.webp')
+        background-size: cover
+        background-position: center
+        opacity: 0.2
+        z-index: -1
