partie galerie ajustement des bouton page et back pour remonter à la navbargalerie et responsive amélioré

--- a/src/components/Galerie/NavbarGalerie/navbarGalerie.module.sass
+++ b/src/components/Galerie/NavbarGalerie/navbarGalerie.module.sass
@@ -20,7 +20,7 @@
     box-sizing: border-box
     @media (max-width: 768px)
       display: flex
-      width: 330px
+      width: 99%
       padding: 6px 12px
       justify-content: space-between
       align-items: center
