--- a/src/pages/Galerie/Galerie.module.sass
+++ b/src/pages/Galerie/Galerie.module.sass
@@ -22,3 +22,6 @@
         background-position: center
         opacity: 0.2
         z-index: -1
+    @media (max-width: 768px)
+        padding: 18px 15px
+        gap: 18px
