--- a/src/components/Galerie/NavbarGalerie/navbarGalerie.module.sass
+++ b/src/components/Galerie/NavbarGalerie/navbarGalerie.module.sass
@@ -4,8 +4,8 @@
   justify-content: center
   align-items: center
   flex-direction: column
-  gap: 16px
-  padding-top: 16px
+  gap: 24px
+  padding: 32px 0px 32px 0px
   &_navBar
     display: flex
     width: 640px
