--- a/src/components/Salon/s5_formulaire/s5Formulaire.module.sass
+++ b/src/components/Salon/s5_formulaire/s5Formulaire.module.sass
@@ -31,6 +31,9 @@
         position: absolute
         bottom: 0
         left: 0%
+        width:20%
+        height: auto
+        padding-left: 60px
         @media (max-width: 768px)
             display: none
 
