--- a/src/components/Service/Hero/HeroService.module.sass
+++ b/src/components/Service/Hero/HeroService.module.sass
@@ -10,13 +10,9 @@
     overflow: hidden 
     box-sizing: border-box
     @media (max-width: 768px)
-        height: 345px
+        height: auto
         padding: 18px 15px
         flex-direction: column
-        align-items: flex-start
-        gap: 18px
-        flex-shrink: 0
-        align-self: stretch
         
     &_txt
         display: flex
@@ -27,7 +23,7 @@
         height: auto
         padding: 24px
         gap: 24px
-        box-sizing: border-box // Assure que le padding est inclus dans la largeur
+        box-sizing: border-box
         @media (max-width: 768px)
             gap: 18px
             width: 100%
@@ -42,10 +38,8 @@
         justify-content: center 
         align-items: center 
         @media (max-width: 768px)
-            position: absolute
-            right: 0
-            bottom: 0
-            width: 30%
+            width: 50%
+            height: 150px
         &_forme
             position: absolute
             right: -5px
