--- a/src/components/Home/s5_contact/contact.module.sass
+++ b/src/components/Home/s5_contact/contact.module.sass
@@ -1,4 +1,12 @@
 @import '../../../index.sass'
+@keyframes bounce 
+  0%, 20%, 50%, 80%, 100% 
+    transform: translateY(0)
+  40% 
+    transform: translateY(-20px)
+  60%
+    transform: translateY(-10px)
+
 .s5Contact
     display: flex
     padding: 24px 60px
@@ -61,15 +69,16 @@
                     width: 100%
                     gap: 18px
                     padding: 0px
-                &_img
+                &_img1, &_img2
                     width: auto // Garde la largeur automatique
                     height: auto // Garde la hauteur automatique
                     max-width: 100% // Empêche l'image de dépasser la largeur de son conteneur
                     max-height: 100% // Empêche l'image de dépasser la hauteur de son conteneur
-
                     @media (max-width: 768px)
                         width: 13% // Ajuste la taille de l'image proportionnellement à la largeur de l'écran
                         height: auto // Assure que l'image garde ses proportions
+                &_img2
+                    animation: bounce 1s infinite
                 &_text
                     @media (max-width: 768px)
                         text-align: center
