PAge politique faite et lien footer politique ajouté

--- a/src/components/Salon/Hero/heroSalon.module.sass
+++ b/src/components/Salon/Hero/heroSalon.module.sass
@@ -38,8 +38,7 @@
         will-change: transform
         transition: transform 0.3s ease-out
 
-.salonHero
     &--parallax::before
         transform: translate3d(0, var(--parallax-offset), 0) // Applique l'offset calculé
-h1
-    text-align: center
+    &_title
+        text-align: center
