--- a/src/components/Salon/s3_Lesalon/LeSalon.module.sass
+++ b/src/components/Salon/s3_Lesalon/LeSalon.module.sass
@@ -16,6 +16,9 @@
         gap: 18px
     &_title
         color: $terra-cotta
+        text-align: center
+    &_subtitle
+        text-align: center
     &_galerie
         display: flex
         width: 100%
@@ -54,7 +57,3 @@
                     flex-shrink: 0
                     @media (max-width: 769px)
                         height: 180px
-
-
-h2, h3
-    text-align: center
