lien des boutons Home et Header modifer pour envoyé au bon endroit de la page

--- a/src/components/Galerie/HeroGalerie/HeroGalerie.module.sass
+++ b/src/components/Galerie/HeroGalerie/HeroGalerie.module.sass
@@ -18,6 +18,8 @@
         flex-direction: column
         justify-content: center
         align-items: center
+        &_subtitle
+            text-align: center
         
     &_imgmaroc
         width: 147px
