--- a/src/components/Home/s2_service/service.module.sass
+++ b/src/components/Home/s2_service/service.module.sass
@@ -12,6 +12,7 @@
     &_title
         width: 100%
         color: $black
+        text-align: center
     &_container
         display: flex
         flex-direction: column
