--- a/src/components/Galerie/NavbarGalerie/navbarGalerie.module.sass
+++ b/src/components/Galerie/NavbarGalerie/navbarGalerie.module.sass
@@ -6,6 +6,8 @@
   flex-direction: column
   gap: 24px
   padding: 32px 0px 32px 0px
+  &_subtitle
+    text-align: center
   &_navBar
     display: flex
     width: 640px
