--- a/src/components/temoignage/temoignage.module.sass
+++ b/src/components/temoignage/temoignage.module.sass
@@ -35,7 +35,7 @@
 
   &__carousel
     width: 100%
-    height: auto
+    height: 100%
     display: flex
     justify-content: center
     align-items: center
@@ -57,17 +57,19 @@
     border-radius: 50% 
     border: 1px solid $terra-cotta
     padding: 24px
-    width: 200px
-    height: 200px
+    width: 260px
+    height: 260px
     margin: 0 auto  // Centre horizontalement l'item
     transition: transform 0.5s ease, background-color 0.5s ease
     @media (max-width: 768px)
       padding: 18px
       border-radius: 16px
+      width: 200px
+      height: 200px
     
     // Effet de mise en avant pour l'élément actif
     &--active
-      transform: scale(1.5)
+      transform: scale(1.3)
       background-color: $terra-cotta
       color: $beige
       @media (max-width: 768px)
