--- a/src/components/Galerie/reseauxsociaux/reseauxsociaux.module.sass
+++ b/src/components/Galerie/reseauxsociaux/reseauxsociaux.module.sass
@@ -1,4 +1,13 @@
 @import '../../../index.sass'
+
+@keyframes bounce 
+  0%, 20%, 50%, 80%, 100% 
+    transform: translateY(0)
+  40% 
+    transform: translateY(-20px)
+  60%
+    transform: translateY(-10px)
+    
 .Reseaux
     display: flex
     padding: 24px 0px
@@ -28,9 +37,16 @@
         &_insta
             width: 100px
             height: auto
+            transition: transform 0.3s ease-in-out
+            animation: bounce 1s infinite
             @media (max-width: 768px)
                 width: 50px
                 height: auto
+
+        &_fb
+            animation: bounce 1s infinite
+        &_insta
+            animation: bounce 1.5s infinite
 
     &_fleurvide
         display: flex
