--- a/src/components/Galerie/HeroGalerie/HeroGalerie.module.sass
+++ b/src/components/Galerie/HeroGalerie/HeroGalerie.module.sass
@@ -18,8 +18,16 @@
         flex-direction: column
         width:60%
         padding: 24px 60px
+        &_title,
         &_subtitle
             text-align: center
+            // Application des animations d'apparition pour les textes
+            span
+                display: inline-block
+                opacity: 0
+                transform: translateY(10px) // Légèrement en dessous au départ
+                animation: appear 1s forwards // Appliquer l'animation sur chaque span
+
     &_imgmaroc
         position: absolute
         top: 18%
@@ -115,3 +123,12 @@
         top: 75%
         @media (max-width: 768px)
             display: none
+
+// Animation pour l'apparition des lettres
+@keyframes appear
+  from
+    opacity: 0
+    transform: translateY(10px) // Légèrement en dessous au départ
+  to
+    opacity: 1
+    transform: translateY(0) // Remonter à sa position normale
