--- a/src/components/Home/Hero/hero.module.sass
+++ b/src/components/Home/Hero/hero.module.sass
@@ -10,74 +10,102 @@ h3 span::after
   white-space: pre // Assure que le saut de ligne est respecté
 
 .homeHero
+  display: flex
+  justify-content: space-between
+  align-items: center
+  width: 100%
+  height: 100vh
+  padding-left: 60px
+  overflow: hidden // Évite le scroll horizontal
+  box-sizing: border-box // Inclut le padding dans la largeur totale
+  @media (max-width: 768px)
+    position: relative
     display: flex
-    justify-content: space-between
-    align-items: center
-    width: 100%
-    height: 100vh
-    padding-left: 60px
-    overflow: hidden // Évite le scroll horizontal
-    box-sizing: border-box // Inclut le padding dans la largeur totale
-    @media (max-width: 768px)
-        position: relative
-        display: flex
-        height: 345px
-        padding: 18px 15px
-        flex-direction: column
-        align-items: flex-start
-        gap: 18px
-        flex-shrink: 0
-        align-self: stretch
+    height: 345px
+    padding: 18px 15px
+    flex-direction: column
+    align-items: flex-start
+    gap: 18px
+    flex-shrink: 0
+    align-self: stretch
         
-    &_txt
-        display: flex
-        flex-direction: column
-        justify-content: space-between
-        align-items: flex-start
-        width: 65%
-        height: auto
-        padding: 24px
-        gap: 24px
-        box-sizing: border-box // Assure que le padding est inclus dans la largeur
-        @media (max-width: 768px)
-            gap: 18px
-            width: 100%
-            height: auto
-            padding: 0px
+  &_txt
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+    align-items: flex-start
+    width: 65%
+    height: auto
+    padding: 24px
+    gap: 24px
+    box-sizing: border-box // Assure que le padding est inclus dans la largeur
+    @media (max-width: 768px)
+      gap: 18px
+      width: 100%
+      height: auto
+      padding: 0px
     
-    &_img
-        position: relative
-        width: 35% 
-        height: 100% 
-        display: flex
-        justify-content: center 
-        align-items: center 
-        @media (max-width: 768px)
-            position: absolute
-            right: 0
-            bottom: 0
-            width: 30%
-        &_fleur
-            position: absolute
-            right: -5px
-            bottom: -10px
-            width: 122%
-            height: auto
-            z-index: 1
-            pointer-events: none
-            animation: rotateFleur 50s linear infinite // rotation 20s pour un tour complet
-        &_main
-            position: absolute
-            right: 0
-            bottom: 0
-            width: 125%
-            height: auto
-            z-index: 2
+    // Ajout de l'animation d'apparition
+    h1 span, h3 span
+      display: inline-block
+      opacity: 0 // Rendre les lettres invisibles au départ
+      animation: appear 1.5s forwards // Appliquer l'animation sur chaque span
 
-@keyframes rotateFleur // Définition de l'animation de rotation
-    from
-        transform: rotate(0deg)
-    to
-        transform: rotate(360deg)
+    h1 span:nth-child(1)
+      animation-delay: 0.1s
 
+    h1 span:nth-child(2)
+      animation-delay: 0.2s
 
+    h3 span:nth-child(1)
+      animation-delay: 0.7s
+
+    h3 span:nth-child(2)
+      animation-delay: 0.9s
+
+  &_img
+    position: relative
+    width: 35% 
+    height: 100% 
+    display: flex
+    justify-content: center 
+    align-items: center 
+    @media (max-width: 768px)
+      position: absolute
+      right: 0
+      bottom: 0
+      width: 30%
+    
+    &_fleur
+      position: absolute
+      right: -5px
+      bottom: -10px
+      width: 122%
+      height: auto
+      z-index: 1
+      pointer-events: none
+      animation: rotateFleur 50s linear infinite // rotation 20s pour un tour complet
+    
+    &_main
+      position: absolute
+      right: 0
+      bottom: 0
+      width: 125%
+      height: auto
+      z-index: 2
+
+// Animation de rotation pour la fleur
+@keyframes rotateFleur 
+  from
+    transform: rotate(0deg)
+  to
+    transform: rotate(360deg)
+
+// Animation pour l'apparition des lettres
+@keyframes appear
+  from
+    opacity: 0
+    transform: translateY(10px) // Légèrement en dessous au départ
+  to
+    opacity: 1
+    transform: translateY(0) // Remonter à sa position normale
