--- a/src/components/Salon/Hero/heroSalon.module.sass
+++ b/src/components/Salon/Hero/heroSalon.module.sass
@@ -1,44 +1,65 @@
 @import '../../../index.sass'
+
+// Conteneur principal
 .salonHero
-    position: relative
-    display: flex
-    width:100%
-    height: 100vh
-    padding: 0px
-    justify-content: center
-    align-items: center
-    flex-shrink: 0
-    align-self: stretch
-    overflow: hidden // Évite le scroll horizontal
-    box-sizing: border-box // Inclut le padding dans la largeur totale
-    // Pseudo-élément pour l'image de fond
-    &::before 
-        content: ''
-        position: absolute
-        top: 0
-        left: 0
-        width: 100%
-        height: 100%
-        background-image: url('../../../assets/Image/Salon/salon1.webp')
-        background-size: cover
-        background-position: center
-        opacity: 0.2
-        z-index: -1
-        transform: translateZ(0) scale(1.5) // Scale légèrement l'image pour compenser le mouvement
-        will-change: transform
-    
-    // Parallaxe en fonction du défilement
-    @media (max-width: 769px)
-        background-attachment: fixed // Fixe l'image par rapport à l'écran pour l'effet parallaxe
-        background-position: center
-        padding: 18px
+  position: relative
+  display: flex
+  width: 100%
+  height: 100vh
+  padding: 0px
+  justify-content: center
+  align-items: center
+  flex-shrink: 0
+  align-self: stretch
+  overflow: hidden // Évite le scroll horizontal
+  box-sizing: border-box // Inclut le padding dans la largeur totale
 
-    // Animation de parallaxe au scroll
-    &::before
-        will-change: transform
-        transition: transform 0.3s ease-out
+  // Pseudo-élément pour l'image de fond
+  &::before
+    content: ''
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    background-image: url('../../../assets/Image/Salon/salon1.webp')
+    background-size: cover
+    background-position: center
+    opacity: 0.2
+    z-index: -1
+    transform: translateZ(0) scale(1.5) // Scale légèrement l'image pour compenser le mouvement
+    will-change: transform
 
-    &--parallax::before
-        transform: translate3d(0, var(--parallax-offset), 0) // Applique l'offset calculé
-    &_title
-        text-align: center
+  // Parallaxe en fonction du défilement
+  @media (max-width: 769px)
+    background-attachment: fixed // Fixe l'image par rapport à l'écran pour l'effet parallaxe
+    background-position: center
+    padding: 18px
+
+  // Animation de parallaxe au scroll
+  &--parallax::before
+    transform: translate3d(0, var(--parallax-offset), 0) // Applique l'offset calculé
+    will-change: transform
+    transition: transform 0.3s ease-out
+
+// Titre avec animation d'apparition
+.salonHero_title
+  text-align: center
+  display: inline-block
+  position: relative
+
+  // Animation pour chaque lettre
+  span
+    display: inline-block
+    opacity: 0
+    transform: translateY(10px) // Légèrement en dessous au départ
+    animation: appear 1s forwards // Appliquer l'animation sur chaque span
+
+// Animation pour l'apparition des lettres
+@keyframes appear
+  from
+    opacity: 0
+    transform: translateY(10px) // Légèrement en dessous au départ
+  to
+    opacity: 1
+    transform: translateY(0) // Remonter à sa position normale
