--- a/src/components/Service/Hero/HeroService.module.sass
+++ b/src/components/Service/Hero/HeroService.module.sass
@@ -1,54 +1,76 @@
 @import '../../../index.sass'
 
 .HeroService
+  display: flex
+  justify-content: center
+  align-items: center
+  width: 100%
+  height: 70vh
+  padding: 24px 60px
+  overflow: hidden 
+  box-sizing: border-box
+  @media (max-width: 768px)
+    height: auto
+    padding: 18px 15px
+    flex-direction: column
+
+  &_txt
     display: flex
-    justify-content: center
-    align-items: center
-    width: 100%
-    height: 70vh
-    padding: 24px 60px
-    overflow: hidden 
+    flex-direction: column
+    justify-content: space-between
+    align-items: flex-start
+    width: 64.5%
+    height: auto
+    padding: 24px
+    gap: 24px
     box-sizing: border-box
     @media (max-width: 768px)
-        padding: 18px 15px
-        flex-direction: column
-        
-    &_txt
-        display: flex
-        flex-direction: column
-        justify-content: space-between
-        align-items: flex-start
-        width: 65%
-        height: auto
-        padding: 24px
-        gap: 24px
-        box-sizing: border-box
-        @media (max-width: 768px)
-            gap: 18px
-            width: 100%
-            height: auto
-            padding: 0px
-    
-    &_img
-        position: relative
-        width: 35% 
-        height: 100% 
-        display: flex
-        justify-content: center 
-        align-items: center 
-        @media (max-width: 768px)
-            
-        &_forme
-            position: absolute
-            right: -5px
-            bottom: 10px
-            width: 80%
-            height: auto
-            z-index: 1
-        &_vernis
-            position: absolute
-            right: 0
-            bottom: 10px
-            width: 80%
-            height: auto
-            z-index: 2
+      gap: 18px
+      justify-content: flex-start
+      width: 100%
+      height: 300px
+      padding: 2px
+    span
+      display: inline-block
+      opacity: 0
+      transform: translateY(10px) // Légèrement en dessous au départ
+      animation: appear 1s forwards // Appliquer l'animation sur chaque span
+
+
+    h1, h3
+      display: inline
+      margin: 0
+
+
+  &_img
+    position: relative
+    width: 35% 
+    height: 100% 
+    display: flex
+    justify-content: center 
+    align-items: center 
+    @media (max-width: 768px)
+      // Style pour les écrans plus petits
+    &_forme
+      position: absolute
+      right: -1.5%
+      bottom: 5%
+      width: 80%
+      height: auto
+      z-index: 1
+    &_vernis
+      position: absolute
+      right: 0
+      bottom: 5%
+      width: 80%
+      height: auto
+      z-index: 2
+
+// Animation pour l'apparition des lettres
+@keyframes appear
+  from
+    opacity: 0
+    transform: translateY(10px) // Légèrement en dessous au départ
+  to
+    opacity: 1
+    transform: translateY(0) // Remonter à sa position normale
